# LR-parser

./: .gitignore  CMakeLists.txt  lr-parser.md  readme.md
.github/workflows/: ci.yaml
docs/: lr-parser.md
end2end/tests/: test1.txt
include/: ast.hpp  grammar.hpp  lexer.h  parser.hpp  tokens.h
src/: lexer.l  main.cpp
tests/: CMakeLists.txt  tests.cpp
